five through thirteen

--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -446,6 +446,299 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 5\n",
+    "# Given the following assigment of the list of fruits, add \"tomato\" to the end of the list. \n",
+    "fruits = [\"mango\", \"banana\", \"guava\", \"kiwi\", \"strawberry\"]\n",
+    "\n",
+    "fruits.append(\"tomato\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mango', 'banana', 'guava', 'kiwi', 'strawberry', 'tomato']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 6\n",
+    "# Given the following assignment of the vegetables list, add \"tomato\" to the end of the list.\n",
+    "vegetables = [\"eggplant\", \"broccoli\", \"carrot\", \"cauliflower\", \"zucchini\"]\n",
+    "\n",
+    "vegetables.append(\"tomato\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['eggplant', 'broccoli', 'carrot', 'cauliflower', 'zucchini', 'tomato']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vegetables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 9, 8, 7, 6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exercise 7\n",
+    "# Given the list of numbers defined below, reverse the list of numbers that you created above. \n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "numbers.reverse()\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['broccoli', 'carrot', 'cauliflower', 'eggplant', 'tomato', 'zucchini']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exercise 8\n",
+    "# Sort the vegetables in alphabetical order\n",
+    "\n",
+    "vegetables.sort()\n",
+    "vegetables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tomato', 'strawberry', 'mango', 'kiwi', 'guava', 'banana']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exercise 9\n",
+    "# Write the code necessary to sort the fruits in reverse alphabetical order\n",
+    "\n",
+    "fruits.sort(reverse = True)\n",
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tomato',\n",
+       " 'strawberry',\n",
+       " 'mango',\n",
+       " 'kiwi',\n",
+       " 'guava',\n",
+       " 'banana',\n",
+       " 'broccoli',\n",
+       " 'carrot',\n",
+       " 'cauliflower',\n",
+       " 'eggplant',\n",
+       " 'tomato',\n",
+       " 'zucchini']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exercise 10\n",
+    "# Write the code necessary to produce a single list that holds all fruits then all vegetables in the order as they were sorted above.\n",
+    "\n",
+    "fruits_and_veggies = fruits + vegetables\n",
+    "fruits_and_veggies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 11\n",
+    "# Write a function definition for a function named add_one that takes in a number and returns that number plus one.\n",
+    "\n",
+    "def add_one(number):\n",
+    "    return number + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_one(22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 12\n",
+    "# Write a function definition named is_positive that takes in a number and returns True or False if that number is positive.\n",
+    "\n",
+    "def is_positive(number):\n",
+    "    return number > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_positive(-23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_positive(23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 13\n",
+    "# Write a function definition named is_negative that takes in a number and returns True or False if that number is negative.\n",
+    "\n",
+    "def is_negative(number):\n",
+    "    return number < 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_negative(-45)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
