forty-one through forty-two

--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -2172,6 +2172,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "# Exercise 41\n",
+    "# Write a function definition named area_of_circle that takes in a number representing a circle's radius and returns the area of the circl\n",
+    "\n",
+    "def area_of_circle(number):\n",
+    "    return math.pi * (number ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.274333882308138"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "area_of_circle(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "153.93804002589985"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "area_of_circle(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "# Exercise 42\n",
+    "# Write a function definition named circumference that takes in a number representing a circle's radius and returns the circumference.\n",
+    "\n",
+    "def circumference(number):\n",
+    "    return math.pi * (number * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43.982297150257104"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "circumference(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
