--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -2333,20 +2333,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exercise 44\n",
     "# Write a function definition named has_vowels that takes in value and returns True if the string contains any vowels.\n",
     "\n",
-    "def has_vowels(str):\n",
-    "    return any(vowel in str.lower() for vowel in \"aeiou\")"
+    "def has_vowels(string):\n",
+    "    return any(vowel in string.lower() for vowel in \"aeiou\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -2355,7 +2355,7 @@
        "True"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2366,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -2375,7 +2375,7 @@
        "False"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2383,6 +2383,207 @@
    "source": [
     "has_vowels(\"TRQ\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count the elements in a string using a list comprehension.\n",
+    "\n",
+    "len([letter for letter in 'banana'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u\n",
+      "u\n",
+      "u\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loop and conditional to print the elements in a string if they are also in another string.\n",
+    "\n",
+    "string = 'ubuntu'\n",
+    "\n",
+    "for letter in string:\n",
+    "    if letter in 'aeiou':\n",
+    "        print(letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count the elements in a string if they are in another string using a list comprehension.\n",
+    "\n",
+    "string = 'ubuntu'\n",
+    "vowels = 'aeiou'\n",
+    "\n",
+    "#    what you want,    outer loop,      inner loop/conditional\n",
+    "len([letter for letter in string.lower() if letter in vowels])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 45\n",
+    "# Write a function definition named count_vowels that takes in value and returns the count of the nubmer of vowels in a sequence.\n",
+    "\n",
+    "def count_vowels(str):\n",
+    "    count = 0\n",
+    "    vowel = \"aeiou\"\n",
+    "    for let in str.lower():\n",
+    "        if let in vowel:\n",
+    "            count += 1\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_vowels(\"mango\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_vowels(\"Trws\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bnt'"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Remove vowels from a string using a list comp and .join() method\n",
+    "\n",
+    "string = 'ubuntu'\n",
+    "vowels = 'aeiou'\n",
+    "\n",
+    "\"\".join([letter for letter in string.lower() if letter not in vowels])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bnt'"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove vowels using regular expressions or Regex\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "re.sub(\"a|e|i|o|u\", \"\", string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
