--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -2566,24 +2566,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise 46\n",
+    "# Write a function definition named remove_vowels that takes in string and returns the string without any vowels\n",
+    "\n",
+    "def remove_vowels(string):\n",
+    "    vowels = 'aeiouAEIOU'\n",
+    "    return \"\".join([letter for letter in string if letter not in vowels])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mng'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_vowels(\"mango\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'QrTv'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_vowels(\"QrTuuov\")"
+   ]
   },
   {
    "cell_type": "code",
