forty-seven through forty-nine

--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -2620,10 +2620,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 47\n",
+    "# Write a function definition named starts_with_vowel that takes in string and True if the string starts with a vowel\n",
+    "\n",
+    "def starts_with_vowel(string):\n",
+    "    vowels = 'aeiouAEIOU'\n",
+    "    return string[0] in vowels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "starts_with_vowel('ubuntu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "starts_with_vowel('banana')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 48\n",
+    "# Write a function definition named ends_with_vowel that takes in string and True if the string ends with a vowel\n",
+    "\n",
+    "def ends_with_vowel(string):\n",
+    "    vowels = 'aeiouAEIOU'\n",
+    "    return string[-1] in vowels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ends_with_vowel(\"mango\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ends_with_vowel(\"trail\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise 49\n",
+    "# Write a function definition named starts_and_ends_with_vowel that takes in string and returns True if the string starts and ends with a vowel\n",
+    "\n",
+    "def starts_and_ends_with_vowel(string):\n",
+    "    vowels = \"aeiouAEIOU\"\n",
+    "    return string[0] in vowels and string[-1] in vowels"
+   ]
   }
  ],
  "metadata": {
